test/cli/validate-local-bad-element3/expected
Error in support element in package.json
REQUIRED should have required property 'repository'

> 1 | {"support":{}}
    |            ^ ☹️  repository is missing here!
